--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,15 +1,111 @@
 /* apply a natural box layout model to all elements, but allowing components to change */
+
 html {
-  box-sizing: border-box;
-}
-*, *:before, *:after {
-  box-sizing: inherit;
+    box-sizing: border-box;
 }
 
-html, body {
-  height: 100%;
-  width: 100%;
-  padding: 0;
-  margin: 0;
-  font-family: sans-serif;
+*,
+*:before,
+*:after {
+    box-sizing: inherit;
+}
+
+html,
+body {
+    height: 100%;
+    width: 100%;
+    padding: 0;
+    margin: 0;
+    font-family: sans-serif;
+}
+
+h2 {
+    margin: 1rem;
+}
+
+.flex-container {
+    display: flex;
+}
+
+.flex-column {
+    flex-direction: column;
+}
+
+.task {
+    margin: 1rem;
+    display: inline-block;
+    font-size: 11pt;
+    &.not-started {
+        border: 3px solid black;
+        color: black;
+    }
+    &.in-progress {
+        border: 3px solid orange;
+        color: orange;
+    }
+    &.overdue {
+        border: 3px solid red;
+        color: red;
+    }
+    &.done {
+        border: 3px solid green;
+        color: green;
+    }
+    &-icon {
+        font-size: 4.5rem;
+        padding: 0.8rem;
+    }
+    &-details {
+        margin: 0 1rem;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    &-title,
+    &-status,
+    &-deadline {
+        margin: 0.5rem 0;
+        font-weight: 500;
+    }
+}
+
+.news-list {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    a {
+        text-decoration: none;
+        color: black;
+        height: 100%;
+        width: 100%;
+        padding: 1rem;
+    }
+}
+
+.news {
+    &:nth-child(odd) {
+        background-color: #F1F2F3;
+    }
+    &-details {
+        margin: 0 1rem;
+        display: flex;
+        flex-direction: column;
+        .date {
+            font-size: 8pt
+        }
+        .headline {
+            margin-top: 0.5rem;
+        }
+    }
+    .author {
+        width: 8rem;
+        text-align: center;
+        font-size: 9pt;
+        &-image {
+            max-height: 3rem;
+            max-width: 3rem;
+            padding: 1rem;
+        }
+    }
 }
